3.1.3
 * fixes compile issue with XCode 16
 * updates installation to R=4.2 and other package version updates
 * transitions service.iris.edu to service.earthscope.org
 * changes http to https

3.1.2
 * bug fix for when csv_dir, psd_dir, and/or pdf_dir are blank
 * replaced test_data/RESP.KAPI.II.00.BHZ.txt to a functional resp file

3.1.1
 * updated conda package versions when running './run_ispaq.py -U'

3.1.0
 * addition of --sds argument for specifying Seiscomp SDS file naming convention NET.STA.LOC.CHAN.TYPE.YEAR.DAY
 * bug fix for FDSN station web services that do not support optional parameter includerestricted
 * bug fix for reading local files for event metrics that span day boundaries
 * bug fix, will not append to TRANSCRIPT log unless '-A' option specified
 * bug fix, sort out-of-order miniseed segments when reading
 * recommends creating conda environment using obspy 1.4.0

3.0.1
 * dependency numpy package version must be <1.22 to avoid errors. Added numpy=1.21.4 to the ispaq-conda-install.txt file.

3.0.0
 * ports code to Python3
 * includes MUSTANG metrics sample_rate_resp, sample_rate_channel, max_range
 * modifications to preference file default.txt
 * access to IRIS PH5 archive data, using IRISPH5 name
 * includes option to write metric values to SQLite database
 * updates recommended conda package versions
 * requires installation of R-packages seismicRoll 1.1.4, IRISMustangMetrics 2.4.4, IRISSeismic 1.6.3
 * local data will be marked percent_availability=0 for target-days without data if metadata is included for target 
 * updates to documentation, including new Jupyter notebook tutorials
 * updates to logging output
 * PSD and PDF output targets now contain quality code information
 * bug fix, transfer_function metric will run on all requested days with correct results
 * bug fix, PDF calculation completes when using CSV files having multiple SNCLs with a differing number of targets 

2.0.1