@@ -27,7 +27,11 @@ MUSTANG.
 
 # Background
 
-[EarthScope] (https://www.earthscope.org) (formerly IRIS) has developed a 
+In 2023, IRIS (Incorporated Research Institutions for Seismology) and UNAVCO merged
+to form EarthScope Consortium. IRIS (now EarthScope) webservices are unchanged but 
+can now be accessed at \url{https://service.earthscope.org} as well as \url{https://service.iris.edu}.
+
+[EarthScope] (https://www.earthscope.org) has developed a 
 comprehensive quality assurance system called [MUSTANG](https://service.earthscope.org/mustang/).
 
 The MUSTANG system was built to operate at EarthScope and is not generally portable. 
@@ -309,12 +313,14 @@ as `Network.Station.Location.Channel[.Quality]`. This format pattern can be modi
 **Data_Access** has four entries describing where to find data, metadata, events, and optionally response files.
 
 * `dataselect_url:` should indicate a *miniSEED* data resource as one of the *FDSN web service aliases* used by ObsPy 
-(e.g. `IRIS`), the EarthScope PH5 web service alias 'IRISPH5', an explicit URL pointing to an FDSN web service domain (e.g. `https://service.earthscope.org` ), or a file 
+(e.g. `IRIS`), EARTHSCOPE (an alias of 'IRIS'), the EarthScope PH5 web service alias 'IRISPH5', 
+an explicit URL pointing to an FDSN web service domain (e.g. `https://service.earthscope.org` ), or a file 
 path to a directory containing miniSEED files (_See: "Using Local Data Files", below_).
 
 > _NOTE:_ When data is missing and it is marked as percent_availability=0, the quality code to assign to the target must be inferred. To do this, the current logic is to assign quality "M" for EarthScope (fdsnws) derived data, and quality "D" for all other data (IRISPH5, local data, or any other webservice). We are aware that this is too simplistic to truly capture the range of possible quality codes, and have it on our radar to improve with a later release. 
 
-* `station_url:` should indicate a metadata location as an FDSN web service alias, the EarthScope PH5 web service alias 'IRISPH5',
+* `station_url:` should indicate a metadata location as an FDSN web service alias, EARTHSCOPE (an alias of 'IRIS'),
+the EarthScope PH5 web service alias 'IRISPH5',
 an explicit URL, or a path to a file containing metadata in [StationXML](https://www.fdsn.org/xml/station/) format 
 ([schema](https://www.fdsn.org/xml/station/fdsn-station-1.0.xsd)). For web services, this should point to the same place as 
 `dataselect_url` (e.g. `https://service.earthscope.org`). For local metadata, StationXML is read at the channel level and any 
@@ -333,7 +339,8 @@ explicit URL (e.g. `https://earthquake.usgs.gov`), or a path to a file containin
 ([schema](https://quake.ethz.ch/quakeml/docs/xml?action=AttachFile&do=get&target=QuakeML-BED-1.2.xsd)). 
 Only web service providers that can output text format can be used at this time. This entry will 
 only be used by metrics that require event information in order to be calculated (*cross_talk, polarity_check, 
-orientation_check*).
+orientation_check*). The EarthScope event service is deprecated and event_urls directed at the EarthScope web services will 
+redirect to the USGS event service at https://earthquake.usgs.gov.
 
 * `resp_dir:` should be unspecified or absent if local response files are not used. The default behavior
  is to retrieve response information from the EarthScope web service [Evalresp](https://service.earthscope.org/irisws/evalresp/1/). 
