@@ -103,7 +103,7 @@ PDF_Preferences:
 # About the Data_Access Section:
 # FDSN service providers may be specified by using one of the following names:
 #
-#   BGR, EMSC, ETH, GEONET, GFZ, INGV, IPGP, IRIS, ISC, KOERI,
+#   BGR, EMSC, ETH, GEONET, GFZ, INGV, IPGP, IRIS, EARTHSCOPE, ISC, KOERI,
 #   LMU, NCEDC, NIEP, ODC, ORFEUS, RESIF, SCEDC, USGS, USP
 #
 #   FDSN service providers may also be specified as an https:// address:
@@ -114,7 +114,7 @@ PDF_Preferences:
 #
 #   The FDSN event service must provide an option for text output.
 #
-# To access the IRIS PH5 archive, use the IRISPH5 name. This will direct ISPAQ to
+# To access the EarthScope PH5 archive, use the IRISPH5 name. This will direct ISPAQ to
 # https://service.earthscope.org/ph5ws for data and metadata.
 # This must be the same for dataselect_url and station_url.
 #
@@ -125,7 +125,7 @@ PDF_Preferences:
 #  * station_url: path of StationXML file (can also be FDSN service provider)
 #  * resp_dir: directory containing local response RESP files, if used.
 #
-# If resp_dir is left blank with no directory specified, ISPAQ defaults to the IRIS DMC evalresp web 
+# If resp_dir is left blank with no directory specified, ISPAQ defaults to the EarthScope evalresp web 
 # service https://service.earthscope.org/irisws/evalresp/1/
 #
 # NOTE: Directory names should not match FDSN provider names.
